; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_writecb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_writecb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }

@EV_READ = common dso_local global i32 0, align 4
@test_ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent*, i8*)* @http_writecb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @http_writecb(%struct.bufferevent* %0, i8* %1) #0 {
  %3 = alloca %struct.bufferevent*, align 8
  %4 = alloca i8*, align 8
  store %struct.bufferevent* %0, %struct.bufferevent** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.bufferevent*, %struct.bufferevent** %3, align 8
  %6 = call i32 @bufferevent_get_output(%struct.bufferevent* %5)
  %7 = call i64 @evbuffer_get_length(i32 %6)
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.bufferevent*, %struct.bufferevent** %3, align 8
  %11 = load i32, i32* @EV_READ, align 4
  %12 = call i32 @bufferevent_enable(%struct.bufferevent* %10, i32 %11)
  %13 = load i32, i32* @test_ok, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @test_ok, align 4
  br label %15

15:                                               ; preds = %9, %2
  ret void
}

declare dso_local i64 @evbuffer_get_length(i32) #1

declare dso_local i32 @bufferevent_get_output(%struct.bufferevent*) #1

declare dso_local i32 @bufferevent_enable(%struct.bufferevent*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
